app-game/src/main/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-game
  namespace: app-game
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: app-game
  template:
    metadata:
      name: app-game
      labels:
        app.kubernetes.io/name: app-game
    spec:
      containers:
        - name: app-game
          image: app-game:0.0.1
          volumeMounts:
            - name: volume-secret-app-game
              mountPath: /etc/secret
      volumes:
        - name: volume-secret-app-game
          secret:
            secretName: app-game
      serviceAccountName: app-game-sa
