app-game/src/main/k8s/deployment-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-game
  namespace: app-game
spec:
  rules:
    - host: app-game.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-game
                port:
                  number: 8200
